feat: added starter form submission

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 
     <title>Hello, world!</title>
   </head>
-  <body>
+  <body class="bg-dark">
     <div class="container">
 
       {% block content %}{% endblock %}
