catching args from the form

--- a/templates/spinner.html
+++ b/templates/spinner.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="d-flex justify-content-center mt-5">
+<div class="d-flex justify-content-center mt-5 text-white">
   <div class="spinner-border" role="status">
     <span class="visually-hidden">Loading...</span>
   </div>
