created fetching function

--- a/templates/spinner.html
+++ b/templates/spinner.html
@@ -8,4 +8,7 @@
   </div>
 </div>
 
+
+<script type="text/javascript" src="{{ url_for('static', filename='spinner.js') }}" keywords = {{ keywords }}, websites = {{ websites }}>
+</script>
 {% endblock %}
